添加相关结果

--- a/GRWA/2018ecoc.md
+++ b/GRWA/2018ecoc.md
@@ -51,23 +51,34 @@
 
 **9link-15link+NSFNET对比实验**
 
-|cluster|network|name|result|directory|
-|:-----|:-----|:-----|:-----|:-----|
-|20|6node_9link|lr7e-4||/mnt/lustre/yanboyuan/GRWA/bash/lr7e-4|
-|30|7node_10link|7node_10link_lr7e-4||/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/7node_10link_lr7e-4|
-|30|8node_11link|8node_11link_lr7e-4||/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/8node_11link_lr7e-4|
-|30|8node_12link|8node_12link_lr7e-4||/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/8node_12link_lr7e-4|
-|30|8node_13link|8node_13link_lr7e-4||/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/8node_13link_lr7e-4|
-|30|9node_14link|9node_14link_lr7e-4||/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/9node_14link_lr7e-4|
-|30|9node_15link|9node_15link_lr7e-4||/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/9node_15link_lr7e-4|
-|20|NSFNET|NSFNET_miu170_lr7e-4||/mnt/lustre/yanboyuan/GRWA/bash/NSFNET_miu170_lr7e-4|
+|cluster|network|name|lowest bp|finished?|directory|
+|:-----|:-----|:-----|:-----|:-----|:-----|
+|20|6node_9link|lr7e-4|0.0797|Yes|/mnt/lustre/yanboyuan/GRWA/bash/lr7e-4|
+|30|7node_10link|7node_10link_lr7e-4|0.07968（最后几千代跑飞）|Yes|/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/7node_10link_lr7e-4|
+|30|8node_11link|8node_11link_lr7e-4|不收敛（重跑中）|Yes|/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/8node_11link_lr7e-4|
+|30|8node_12link|8node_12link_lr7e-4|0.078|Yes|/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/8node_12link_lr7e-4|
+|30|8node_13link|8node_13link_lr7e-4|0.0945|Yes|/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/8node_13link_lr7e-4|
+|30|9node_14link|9node_14link_lr7e-4|0.075|Yes|/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/9node_14link_lr7e-4|
+|30|9node_15link|9node_15link_lr7e-4|0.088（最后有波动）|Yes|/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/9node_15link_lr7e-4|
+|20|NSFNET|NSFNET_miu170_lr7e-4|0.163|No|/mnt/lustre/yanboyuan/GRWA/bash/NSFNET_miu170_lr7e-4|
+|20|7node_10link|4expand_7node_10link_lr7e-4||No|/mnt/lustre/yanboyuan/GRWA/bash/4expand_7node_10link_lr7e-4|
+|20|8node_11link|4expand_8node_11link_lr7e-4||No|/mnt/lustre/yanboyuan/GRWA/bash/4expand_8node_11link_lr7e-4|
+|20|8node_12link|4expand_8node_12link_lr7e-4||No|/mnt/lustre/yanboyuan/GRWA/bash/4expand_8node_12link_lr7e-4|
+|20|8node_13link|4expand_8node_13link_lr7e-4||No|/mnt/lustre/yanboyuan/GRWA/bash/4expand_8node_13link_lr7e-4|
+|20|9node_14link|4expand_9node_14link_lr7e-4||No|/mnt/lustre/yanboyuan/GRWA/bash/4expand_9node_14link_lr7e-4|
+|20|9node_15link|4expand_9node_15link_lr7e-4|0.274|No|/mnt/lustre/yanboyuan/GRWA/bash/4expand_9node_15link_lr7e-4|
+|20|NSFNET|4expand_NSFNET_miu170_lr7e-4|0.242|No|/mnt/lustre/yanboyuan/GRWA/bash/4expand_NSFNET_miu170_lr7e-4|
 
 
 **多模态实验**
 
-|cluster|network|name|result|directory|
-|:-----|:-----|:-----|:-----|:-----|
-|20|NSFNET|NSFNET_miu170_lr7e-4||/mnt/lustre/yanboyuan/GRWA/bash/NSFNET_miu170_lr7e-4|
-|20|NSFNET|noroute_NSFNET_miu170_lr7e-4||/mnt/lustre/yanboyuan/GRWA/bash/noroute_NSFNET_miu170_lr7e-4|
-|20|6node_9link|lr7e-4||/mnt/lustre/yanboyuan/GRWA/bash/lr7e-4|
-|20|6node_9link|noroute_lr7e-4||/mnt/lustre/yanboyuan/GRWA/bash/noroute_lr7e-4|
+|cluster|network|name|lowest bp|finished?|directory|
+|:-----|:-----|:-----|:-----|:-----|:-----|
+|20|NSFNET|NSFNET_miu170_lr7e-4|0.148（最后跑飞了）|Yes|/mnt/lustre/yanboyuan/GRWA/bash/NSFNET_miu170_lr7e-4|
+|20|NSFNET|noroute_NSFNET_miu170_lr7e-4|0.283|No|/mnt/lustre/yanboyuan/GRWA/bash/noroute_NSFNET_miu170_lr7e-4|
+|20|NSFNET|4expand_noroute_NSFNET_miu170_lr7e-4|0.280|No|/mnt/lustre/yanboyuan/GRWA/bash/noroute_4expand_5wave_lr7e-4|
+|20|NSFNET|4expand_NSFNET_miu170_lr7e-4|0.146（已跑飞，再重跑）|No|/mnt/lustre/yanboyuan/GRWA/bash/4expand_NSFNET_miu170_lr7e-4|
+|20|6node_9link|lr7e-4|0.0797|Yes|/mnt/lustre/yanboyuan/GRWA/bash/lr7e-4|
+|20|6node_9link|noroute_lr7e-4|0.158|Yes|/mnt/lustre/yanboyuan/GRWA/bash/noroute_lr7e-4|
+|30|6node_9link|4expand_lr7e-4|0.084|Yes|/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/4expand_5wave_lr7e-4|
+|30|6node_9link|4expand_noroute_lr7e-4|0.203|Yes|/mnt/lustre/yanboyuan/ONS4Py/GRWA/bash/noroute_4expand_5wave_lr7e-4|
